// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableRadio > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-label="Select Row"
        class="rmd-hidden-input"
        id="radio-_r_0_"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_unchecked
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </span>
    </span>
  </label>
</td>
`;

exports[`TableRadio > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis custom-class-name"
  style="pointer-events: none;"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-label="Select Row"
        class="rmd-hidden-input"
        id="radio-_r_0_"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_unchecked
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </span>
    </span>
  </label>
</td>
`;

exports[`TableRadio > should handle the aria-label/aria-labelledby props correctly 1`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-label="Custom Label"
        class="rmd-hidden-input"
        id="radio-_r_3_"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_unchecked
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </span>
    </span>
  </label>
</td>
`;

exports[`TableRadio > should handle the aria-label/aria-labelledby props correctly 2`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-labelledby="another-id"
        class="rmd-hidden-input"
        id="radio-_r_3_"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_unchecked
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </span>
    </span>
  </label>
</td>
`;
